--- a/index.html
+++ b/index.html
@@ -76,8 +76,99 @@
       <article>
         <div class="row">
           <div class="banner">
-            <!--<img src="img/topBanner.png">-->
-            <h3>#МНЕНЕЛ ЕНЬ</h3>
+            <img src="img/topBanner.png">
+           <!--  <div>
+              <div class="hashbanner">#МНЕ<span class="white">НЕ</span><span class="green">ЛЕНЬ</span></div>
+              <div>90 дней для победы над ленью</div>
+            </div> -->
+          </div>
+        </div>
+        <div class=" description row">
+          <div class="col-xs-12 col-md-8 col-md-offset-2 text-xs-center">Текст вводная Рассказываем что это и зачем. (Кратко) congue dictum. Pellentesque consequat orci sed metus convallis, tincidunt gravida libero scelerisque. Aliquam posuere feugiat est eget </div>
+        </div>
+        <div class="secondBanner row">
+          <div class="text-xs-center">Да, мне не лень!</div>
+          <a href="#" class="fb text-xs-center">Следить на Facebook</a>
+        </div>
+        <div class="participants row">
+          <div class="text-xs-center"><span class="rot45deg">участники</span></div>
+        </div>
+        <div class="participantsBlocks row">
+          <div class="col-xs-12 col-md-6">
+            <div class="row">
+              <div class="col-xs-7 col-xs-offset-4">
+                <div class="row top">
+                  <span class="name">Марина</span>
+                  <span class="hash">#Мненеленьбег</span>
+                  <span class="">Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.</span>
+                  <div class="videoLink">
+                    <a href="#" class="video" data-toggle="modal" data-target="#runing">
+                      <img src="img/video.png">
+                    </a>
+                    <div class="modal fade" id="runing" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/mNlSxHjoDLA?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;modestbranding=0" frameborder="0" allowfullscreen></iframe>       
+                            </div>
+                          </div>
+                        </div>
+                    </div>  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="row">
+              <div class="col-xs-7 col-xs-offset-2">
+                <div class="row top">
+                  <span class="name">Настасья</span>
+                  <span class="hash">#Мненеленьбег</span>
+                  <span class="text">Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.</span>
+                  <div class="videoLink">
+                    <a href="#" class="video" data-toggle="modal" data-target="#yoga">
+                      <img src="img/video.png">
+                    </a>
+                    <div class="modal fade" id="yoga" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/FwDaOcotclY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                          </div>
+                        </div>
+                    </div>  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="simpleText row">
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula.  
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula.  
+              </div>
+            </div>
           </div>
         </div>
       </article>
