--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="secondBanner row">
           <div class="text-xs-center">Да, мне не лень!</div>
-          <a href="#" class="fb text-xs-center">Следить на Facebook</a>
+          <a href="#" class="fb text-xs-center">следить на Facebook</a>
         </div>
         <div class="participants row">
           <div class="text-xs-center"><span class="rot45deg">участники</span></div>
@@ -129,7 +129,7 @@
               <div class="col-xs-7 col-xs-offset-2">
                 <div class="row top">
                   <span class="name">Настасья</span>
-                  <span class="hash">#Мненеленьбег</span>
+                  <span class="hash">#Мненеленьйога</span>
                   <span class="text">Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.</span>
                   <div class="videoLink">
                     <a href="#" class="video" data-toggle="modal" data-target="#yoga">
@@ -171,11 +171,198 @@
             </div>
           </div>
         </div>
+        <div class="thirdBanner row">
+          <div class="text text-xs-center">Все еще лень?</div>
+          <div class="subtext text-xs-center">Давай вместе!</div>
+
+          <a href="#" class="fb text-xs-center">следить на Facebook</a>
+        </div>
+        <div class="blog row">
+          <div class="title col-md-6">статьи</div>
+          <div class="title col-md-6 text-xs-right">сортировать</div>
+          <div class="filter text-md-right">
+            <input type="checkbox" id="run" name="run" value="run">
+            <label for="run">бег</label>
+            <input type="checkbox" id="yog" name="yog"  value="yog">
+            <label for="yog">йога</label>
+            <input type="checkbox" id="experts" name="experts"  value="experts">
+            <label for="experts">эксперты</label>
+            <input type="checkbox" id="participans" name="participans"  value="participans">
+            <label for="participans">участники</label>
+            <input type="checkbox" id="all" name="all"  value="all" checked>
+            <label for="all">все</label>
+          </div>
+          <div class="blogPosts col-md-10 col-md-offset-1">
+            <div class="row">
+
+            <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 yog run">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+
+            <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 experts run">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+
+
+            <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 experts yog">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+
+
+            <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 run">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+
+
+            <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 yog participans">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+                          <!--запись блога-->
+              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 participans experts">
+                <div class="row">
+                  <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
+                  <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
+                  <div class="comments-views col-xs-6 col-xs-offset-2 text-xs-right">
+                    <div class="views"><img src="img/eye.png" >12</div>
+                    <div class="comments"><img src="img/comments.png">0</div>
+                  </div> 
+                  <a href="#" class="title col-xs-12">ЗАГОЛОВОК Donec eros libero, ltrices nec nunc sed nec nunc sed</a>
+
+                  <div class="blogPostThumb text-xs-left col-xs-12"><a href="#"><img src="img/blogPostThumb.png"><div class="details"><span>Подробнее</span></div></a></div>
+                  <div class="blogPostText text-xs-left col-xs-12">
+                    Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.Текст еще не придумали. Нечто, предлагающие следить за участниками, участвовать в движухе dictum sed ac ligula. Donec eros libero, ultrices nec nunc sed, commodo consectetur erat.
+                  </div>
+                </div>
+              </div>
+              <!-------------------- -->
+
+
+            </div>
+          </div>
+        </div>
       </article>
     </div>
 
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(".filter input").on("change", function(){
+          attr1 = $(this).val();
+          
+          $(".blogItem").fadeOut("fast");
+            if(attr1 !== "all"){
+              $(".filter input:checked").each(function(){
+                attr = $(this).val();
+                var x = tmp = 0;
+                $(".blogItem").each(function(){
+
+                  if($(this).hasClass(attr)){
+                    tmp = x%2;
+                    if(tmp !== 0){
+                      $(this).addClass("col-xs-offset-1");
+                    } else {
+                      $(this).removeClass("col-xs-offset-1");
+                    }                      
+                    $(this).fadeIn("fast");
+                    x++;
+                  }
+                });
+              });
+              $(".filter input#all").removeAttr("checked");
+            } else {
+                $(".blogItem").fadeIn("col-xs-offset-1");
+                $(".blogItem").filter("odd").fadeIn("col-xs-offset-1");
+                $(".filter input").not(this).removeAttr("checked");
+                $(".blogItem").fadeIn("fast");            
+            }
+
+              //$(".blogItem").filter(":visible").filter(":odd").addClass("col-xs-offset-1").css("border","1px solid red");
+          
+        });
+
+      });
+    </script>
   </body>
 </html>
