--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 
             <!--запись блога-->
-              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 experts run">
+              <div class="blogItem col-xs-12 col-md-5 col-md-offset-1 experts run">
                 <div class="row">
                   <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
                   <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
@@ -258,7 +258,7 @@
 
 
             <!--запись блога-->
-              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 run">
+              <div class="blogItem col-xs-12 col-md-5 col-md-offset-1 run">
                 <div class="row">
                   <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
                   <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
@@ -298,7 +298,7 @@
               <!-------------------- -->
 
                           <!--запись блога-->
-              <div class="blogItem col-xs-12 col-md-5 col-xs-offset-1 participans experts">
+              <div class="blogItem col-xs-12 col-md-5 col-md-offset-1 participans experts">
                 <div class="row">
                   <div class="blogPostAuthorThumb text-xs-left"><img src="img/avatar.png"></div>
                   <div class="date col-xs-4 text-xs-left">16 июня 2016</div>
@@ -326,43 +326,6 @@
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $(".filter input").on("change", function(){
-          attr1 = $(this).val();
-          
-          $(".blogItem").fadeOut("fast");
-            if(attr1 !== "all"){
-              $(".filter input:checked").each(function(){
-                attr = $(this).val();
-                var x = tmp = 0;
-                $(".blogItem").each(function(){
-
-                  if($(this).hasClass(attr)){
-                    tmp = x%2;
-                    if(tmp !== 0){
-                      $(this).addClass("col-xs-offset-1");
-                    } else {
-                      $(this).removeClass("col-xs-offset-1");
-                    }                      
-                    $(this).fadeIn("fast");
-                    x++;
-                  }
-                });
-              });
-              $(".filter input#all").removeAttr("checked");
-            } else {
-                $(".blogItem").fadeIn("col-xs-offset-1");
-                $(".blogItem").filter("odd").fadeIn("col-xs-offset-1");
-                $(".filter input").not(this).removeAttr("checked");
-                $(".blogItem").fadeIn("fast");            
-            }
-
-              //$(".blogItem").filter(":visible").filter(":odd").addClass("col-xs-offset-1").css("border","1px solid red");
-          
-        });
-
-      });
-    </script>
+      <script src="js/main.js"></script>
   </body>
 </html>
